--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 
 /.vs/Final Project 2.0/FileContentIndex/fa256791-dc82-4c3e-8636-a44a400a2ee8.vsidx
 /.vs/Final Project 2.0/FileContentIndex/a6680083-84c2-490b-b8d1-1069582f16e4.vsidx
+/.vs/Final Project 2.0/FileContentIndex/1ecef47a-e18d-4003-bd61-ef80d972a3b9.vsidx
+/.vs/Final Project 2.0/FileContentIndex/0ed07fb1-3e14-4c10-ac7a-6183e04ec6fa.vsidx
