--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 /.vs/Final Project 2.0/FileContentIndex/a6680083-84c2-490b-b8d1-1069582f16e4.vsidx
 /.vs/Final Project 2.0/FileContentIndex/1ecef47a-e18d-4003-bd61-ef80d972a3b9.vsidx
 /.vs/Final Project 2.0/FileContentIndex/0ed07fb1-3e14-4c10-ac7a-6183e04ec6fa.vsidx
+/.vs/Final Project 2.0/FileContentIndex/69ad73ab-ad37-4da9-a8cc-ad8ee0dffc27.vsidx
+/.gitignore
+/.gitignore
+/.gitignore
+/.vs/Final Project 2.0/FileContentIndex/c22f9b41-02a3-4083-8270-f4889feae2b0.vsidx
