Removed test func

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /.gitignore
 /.gitignore
 /.vs/Final Project 2.0/FileContentIndex/c22f9b41-02a3-4083-8270-f4889feae2b0.vsidx
+/.vs/Final Project 2.0/FileContentIndex/b3873cac-5bdb-4264-8f0a-aa6acb43082b.vsidx
+/.gitignore
